syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.widedelivery.order.proto";

package com.widedelivery.order.proto;

import "driver.proto";

message AddDriverToMatchingInput {
  DriverWithTrips driver_with_trips = 1;
}
