syntax = "proto3";

package order;

import "google/protobuf/timestamp.proto";
import "order.proto";
import "user.proto";

message CreateOrderInput {
  UserDTO user = 1;
  string cargo_type = 2;
  double cargo_length = 3;
  double cargo_width = 4;
  double cargo_height = 5;
  string departure_longitude = 6;
  string departure_latitude = 7;
  google.protobuf.Timestamp departure_time = 8;
  string destination_longitude = 9;
  string destination_latitude = 10;
  google.protobuf.Timestamp destination_time = 11;
  string description = 12;
  bool need_loader = 13;
}

message CreateOrderResponse { Order order = 1; }
